@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* added CompositeField.getValueClass()
 * move com.exedio.cope.util.CopeFilter to package com.exedio.cope.misc
 	deprecated version is provided
 * added generic creator method "newValue(SetValue...)" for Composite on CompositeField
